hard-gists/5263533/run.log
=== Docker Run Log for 5263533 ===
Started at: Mi 29. Okt 15:29:53 CET 2025

[2025-10-29 15:29:53] START: Running container for 5263533
[2025-10-29 15:29:53] SUCCESS: Container 9acefc4f9846032238a9e823de260dc7b171ed34133aafc45ba09f4dca83b4b6 started for 5263533
=== Container logs for 5263533 ===
  File "/snippet.py", line 9
    print "Converting"
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5263533 ===
[2025-10-29 15:29:56] INFO: Container 9acefc4f9846032238a9e823de260dc7b171ed34133aafc45ba09f4dca83b4b6 has stopped
